--- a/package.json
+++ b/package.json
@@ -27,13 +27,13 @@
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2",
-    "typescript": "~4.0.2"
+    "typescript": "~4.0.2",
+    "@types/node": "^12.11.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1100.5",
     
     "@types/jasmine": "~3.6.0",
-    "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
