--- a/package.json
+++ b/package.json
@@ -28,7 +28,11 @@
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2",
     "typescript": "~4.0.2",
-    "@types/node": "^12.11.1"
+    "@types/node": "^12.11.1",
+     "engines": {
+    "node": "14.5.5",
+    "npm": "8.5.3"
+  }
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1100.5",
