--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "uaras-app",
   "version": "0.0.0",
+  "engines": {
+    "node": "14.5.5",
+    "npm": "8.5.3"
+  },
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -28,11 +32,7 @@
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2",
     "typescript": "~4.0.2",
-    "@types/node": "^12.11.1",
-     "engines": {
-    "node": "14.5.5",
-    "npm": "8.5.3"
-  }
+    "@types/node": "^12.11.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1100.5",
